--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@mdx-js/react": "^3.0.0",
     "classnames": "^2.3.2",
     "gatsby": "^5.12.9",
-    "gatsby-plugin-gdpr-cookies": "^2.0.9",
     "gatsby-plugin-image": "^3.12.3",
     "gatsby-plugin-manifest": "^5.12.3",
     "gatsby-plugin-mdx": "^5.12.3",
@@ -31,6 +30,8 @@
     "react": "^18.2.0",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
+    "react-gtm-module": "^2.0.11",
     "sass": "^1.69.5"
   }
 }
