--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
     "react-ga": "^3.3.1",
     "react-gtm-module": "^2.0.11",
     "sass": "^1.69.5"
+  },
+  "engines": {
+    "npm": "9"
   }
+  
 }
