--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "gatsby build"
+  command = "npm install --legacy-peer-deps && gatsby build"
 [context.production.environment]
   NODE_VERSION = "18.18.2"
   NPM_VERSION = "9.8.1"
