--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fontsource/lato": "^5.0.17",
     "@mdx-js/react": "^2.0.0",
     "classnames": "^2.3.2",
     "gatsby": "^5.12.9",
